# LLMQualitativeCoder

./: .gitignore  README.md  aggregated_files.txt  config.json  config_schemas.py  data_handlers.py  database_functions.py  langchain_llm.py  main.py  meaning_units.db  models.py  output_cues.json  parse_task.py  pyproject.toml  qual_functions.py  requirements.txt  speech_turn_metrics.py  utils.py  validator.py  visualize.py  vtt_to_json.py
configs/: config.json  configA.json  configM.json  configT.json  data_format_config.json  interview_config.json  news_config.json  transcript_config.json
frontend/: index.html  package-lock.json  package.json
helpers/: aggregate.py  cluster_codes.py  csv_to_json.py  extract_names.py  json_to_csv.py  speech_turn_metrics.py  vtt_to_json.py
json_transcripts/: news_articles.json
logs/: master_log.jsonl
outputs/: aggregated_python_files.txt  carlos_output.json  chen_output.json  coded_meaning_units.json  david_output.json  emily_output.json  james_output.json  maria_output.json  teacher_transcript_output_20250114_173847.json  teacher_transcript_output_20250115_122727.json  teacher_transcript_output_20250115_133645.json  teacher_transcript_output_20250115_143941.json  teacher_transcript_output_20250115_144200.json  teacher_transcript_output_20250115_144256.json  teacher_transcript_output_20250115_144740.json  teacher_transcript_output_20250115_153048.json  teacher_transcript_validation_report.json
prompts/: codes_list.txt  codes_list_old.txt  coding_prompt.txt  custom_coding_prompt.txt  example_of_jsonl.txt  example_qual_codes.txt  inductive_coding_prompt.txt  new_schema.txt  parse.txt  parse_prompt.txt  transcript.txt
qual_codebase/: Xnew_schema.txt  new_schema.jsonl
tests/: conftest.py  test_data_handlers.py  test_main.py  test_qual_functions.py  test_utils.py
vtt_transcripts/: 01-carlos.vtt  (+7 more)
(+27 files in other folders)
