[tool.poetry]
name = "transcriptanalysis"
version = "0.1.0"
description = "Middle LLC."
readme = "README.md"
authors = ["Your Name <your.email@example.com>"]

packages = [
    { include = "transcriptanalysis", from = "src" }
]

include = ["src/transcriptanalysis/configs/*.json", "src/transcriptanalysis/prompts/*.txt", "src/transcriptanalysis/json_inputs/*.json"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
hdbscan = "*"
huggingface-hub = "*"
jsonschema = "*"
langchain = "*"
langchain-openai = "*"
matplotlib = "*"
numpy = "*"
pandas = "*"
pydantic = "*"
pytest = "*"
scikit-learn = "*"
scipy = "*"
tqdm = "*"
umap = "*"
umap-learn = "*"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"

[tool.poetry.scripts]
run-main = "transcriptanalysis.main:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
